src/scss/components/_planetPages.scss
[data-planet="mercury"] {


    .planet-img {
        
        
        max-width: rem(111);

        @include breakpoint-up('tiny') {

            max-width: rem(184);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-mercury) );
            
        }
    }
}
[data-planet="venus"] {


    .planet-img {
      
        
        max-width: rem(154);

        @include breakpoint-up('tiny') {

            max-width: rem(253);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-venus) );
            
        }
    }
}
[data-planet="earth"] {


    .planet-img {
        
       
        max-width: rem(173);
       

        @include breakpoint-up('tiny') {

            max-width: rem(285);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
   
    


    .taps-container > button  {


        &:focus {
                border-bottom: 4px solid hsl(var(--cl-earth) );

                @include breakpoint-up('tiny') {
                    
                    border: none;
                    background-color: hsl(var(--cl-earth) );
                }
            
        }
    }
}
[data-planet="mars"] {


    .planet-img {
       
        
        max-width: rem(129);

        @include breakpoint-up('tiny') {

            max-width: rem(213);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-mars) );
            
        }
    }
}
[data-planet="jupiter"] {


    .planet-img {
       
        
        max-width: rem(224);

        @include breakpoint-up('tiny') {

            max-width: rem(369);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-jupiter) );
            
        }
    }
}
[data-planet="saturn"] {


    .planet-img {
       
        
        max-width: rem(256);

        @include breakpoint-up('tiny') {

            max-width: rem(422);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-saturn) );
            
        }
    }
}
[data-planet="uranus"] {


    .planet-img {
       
        
        max-width: rem(176);

        @include breakpoint-up('tiny') {

            max-width: rem(290);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-uranus) );
            
        }
    }
}
[data-planet="neptune"] {


    .planet-img {
        
        
        max-width: rem(173);

        @include breakpoint-up('tiny') {

            max-width: rem(285);
        }
        @include breakpoint-up('small') {
            max-width: 100%;
        }
       
    }
    


    .taps-container > button  {


        &:focus {
                background-color: hsl(var(--cl-neptune) );
            
        }
    }
}

